--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "lib": ["es2017"],
     "paths": {
       "*": [
         "node_modules/@types/*",
