--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ts-node": "^7.0.0"
   },
   "dependencies": {
+    "@waves/waves-api": "^1.3.0",
     "@waves/waves-signature-generator": "^0.13.0",
     "eth-sig-util": "^2.0.1",
     "ethereumjs-util": "^5.2.0",
