--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@waves/waves-api": "^1.3.0",
     "@waves/waves-signature-generator": "^0.13.0",
     "eth-sig-util": "^2.0.1",
+    "eth-simple-keyring": "^2.0.0",
     "ethereumjs-util": "^5.2.0",
     "ethereumjs-wallet": "^0.6.0",
     "hdkey": "^1.0.0"
