--- a/package.json
+++ b/package.json
@@ -15,15 +15,13 @@
     "bip39": "^2.5.0",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
-    "ts-node": "^7.0.0"
+    "ts-node": "^7.0.0",
+    "typescript": "^2.9.2"
   },
   "dependencies": {
     "@waves/waves-api": "^1.3.0",
     "@waves/waves-signature-generator": "^0.13.0",
-    "eth-sig-util": "^2.0.1",
     "eth-simple-keyring": "^2.0.0",
-    "ethereumjs-util": "^5.2.0",
-    "ethereumjs-wallet": "^0.6.0",
     "hdkey": "^1.0.0"
   }
 }
