--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,17 @@
 {
-  "files": [
-    "src/app.ts"
-  ],
-  "include": [
-    "src/**/*.ts"
-  ],
   "compilerOptions": {
-    "module": "commonjs",
-    "noImplicitAny": true,
-    "target": "es6",
-    "outDir": "dist",
-    "rootDir": "src",
-    "sourceMap": true,
-    "baseUrl": ".",
-    "moduleResolution": "node",
-    "removeComments": true,
-    "typeRoots": [
-      "node_modules/@types"
+    "alwaysStrict": true,
+    "baseUrl": "",
+    "lib": [
+      "ES2017",
+      "dom"
     ],
-    "lib": ["es2017"],
-    "paths": {
-      "*": [
-        "node_modules/@types/*",
-        "./src/types/*"
-      ]
-    }
-  }
+    "module": "commonjs",
+    "sourceMap": true,
+    "target": "es5",
+    "outDir": "dist"
+  },
+  "include": [
+    "src"
+  ]
 }
